kubernetes/applications/plex/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: plex
spec:
  parentRefs:
    - name: everlab-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - plex.prod.everlab.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          port: 32400

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-public
  namespace: plex
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https-public

  hostnames:
    - plex.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: plex
          port: 32400
